--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "travlr",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Travlr Getaways",
+  "author": "Joshua.Gagnier@snhu.edu",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -8,10 +10,17 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "express-handlebars": "^6.0.2",
-    "hbs": "^4.2.0",
+    "express": "^4.16.4",
+    "handlebars": "^4.7.7",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "jade": "^1.11.0",
+    "mongoose": "~5.9.2",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.15",
+    "readline": "^1.3.0"
+  },
+  "devDependencies": {
+    "hbs": "^4.2.0",
+    "seedgoose": "^2.0.2"
   }
 }
