--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
   "name": "travlr",
-  "version": "1.0.0",
-  "description": "Travlr Getaways",
-  "author": "Joshua.Gagnier@snhu.edu",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
-    "express": "^4.16.4",
-    "handlebars": "^4.7.7",
+    "dotenv": "^16.0.0",
+    "express": "~4.16.1",
+    "express-jwt": "^6.1.0",
+    "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
-    "jade": "^1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "~5.9.2",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15",
-    "readline": "^1.3.0",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
